# SEA-ME-Students

./: README.md  SDong.md  Template_Student_Bio.md  asmolniakova.md  eshin.md  finddialog.cpp  finddialog.h  hanif.md  skim.md  testfile.abk  testfile2.txt  yyjo.md
Aartemov/: aartemov.md
Akotha/: Akotha.md
Hprasad/: Hprasad.md
Joochan/: joochan.md
SCho/: SCho.md
SDong/: car_info.cpp  convert
Ziyad Mohamed/: Ziyad.md
aaidoo/: aaidoo.md
abonagiri/: abonagiri.md  abonagiri.md.txt
aibrahim/: aibrahim.md
amartinez/: amartinez.md
amartinez/convert/: CMakeLists.txt
asalam/: asalam.md
asmolniakova/: asmolniakova.md
atoepper/: atoepper.md
bkacemi/: bkacemi.md
dko/: dko.md
dko/Module00/: ex_02_convert.cpp  ex_03_old_phonebook.cpp  test
dko/Module01/: a.out  ex_00_car_info_v1.cpp  ex_00_car_info_v2.cpp  ex_01_sports_car.cpp  test
dko/Module02/: ex_00_Smart_pointer.cpp  ex_01_v2_model_your_own_car.cpp
dko/Module03/: Module0
dko/Module03/build-addressbook-Desktop-Debug/: Makefile  addressbook  moc_addresswidget.cpp  moc_tablemodel.cpp
dko/Module03/build-application-Desktop-Debug/: moc_mainwindow.cpp
dko/Module03/build-part1-Desktop-Debug/: Makefile  moc_addressbook.cpp  part1
dko/Module03/build-part2-Desktop-Debug/: Makefile
dko/Module03/build-part3-Desktop-Debug/: moc_addressbook.cpp  part3
dko/Module03/build-part4-Desktop-Debug/: Makefile  part4
dko/Module03/build-part5-Desktop-Debug/: moc_addressbook.cpp  moc_finddialog.cpp
dko/Module03/build-part7-Desktop-Debug/: Makefile
dko/Module03/build-testqt-Desktop-Debug/: moc_adddialog.cpp  moc_addresswidget.cpp  moc_finddialog.cpp
dko/Module03/part1/: part1
dko/Module03/part2/: addressbook.cpp
dko/Module03/part4/: addressbook.cpp  part4
dko/Module03/part5/: addressbook.cpp
dko/Module03/part6/: part6
dko/Module03/part7/: part7
dko/Module03/success_half/: adddialog.cpp  addresswidget.cpp  main.cpp  newaddresstab.cpp  tablemodel.cpp
dko/Module03/testqt/: main.cpp  mainwindow.cpp  mainwindow.ui  newaddresstab.h  secdialog.h  tablemodel.h
dko/Module04/Test_fail/: Test.pro  car.cpp  car.h  game.cpp  game.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
dla/: dla.md
dseo/: Exercise_02.cpp  OOP  car_info  car_info.cpp  dseo.md
dseo/Module00/: case_converter.h  convert  convert_ex01.cpp  dseo.md
dyarkovska/: dyarkovska.md
ecutenco/: ecutenco.md
ekuechel/: ekuechel.md
elee/: elee.md
eshin/: eshin.md
euyi/: euyi.md
fbeyer/: fbeyer.md
fgeissler/: fgeissler.md
hPark/: hPark.md
hanif/: hanif.md
hhirca/: hhirca.md
hyeo/: hyeo.md
hyeo/Module00/: exercise02.cpp  exercise03.cpp
hyeo/Module01/: exercise00.cpp  exercise01.cpp
iabazie/: iabazie.md
ikhuzin/: ikhuzin.md
jalee/: jalee.md
jjung/: jjung.md
jkim/: jkim.md
jlee/: jlee.md
jpark/: jpark.md
jpark/module00/exercise02/: Converter.cpp
jpark/warm-up/module01/ex01/: CMakeLists.txt  Car.cpp  Car.hpp  SportsCar.cpp  SportsCar.hpp  main.cpp
jwpark/: jwpark.md
kPark/: kPark.md  kPark.md.rej
kPatel/: kPatel.md
kdahyun/: Exercise_02.cpp  OOP_car  OOP_car.cpp  Old_phonebook.cpp  a.out  car_info  convert  inherit  inheritance_car.cpp  kdahyun.md  old_phonebook  opp_car
kdahyun/Module00/: ex_03_old_phonebook.cpp
kdahyun/Module01/: ex_02_software_defined_car.cpp
kdahyun/Module02/: ex_01_v1_model_your_own_car.cpp
kdahyun/Module03/application/: application
kdahyun/Module03/books/: books
kdahyun/Module03/build-SuperAddressBook-Desktop-Debug/: Makefile  moc_mainwindow.cpp
kdahyun/Module03/build-addressbook-Desktop-Debug/: Makefile  moc_adddialog.cpp  moc_addresswidget.cpp  moc_finddialog.cpp  moc_mainwindow.cpp  moc_newaddresstab.cpp
kdahyun/Module03/build-application-Desktop-Debug/: Makefile  application  qrc_application.cpp
kdahyun/Module03/build-books-Desktop-Debug/: Makefile  books  moc_bookwindow.cpp  qrc_books.cpp  ui_bookwindow.h
kdahyun/Module03/build-part2-Desktop-Debug/: moc_addressbook.cpp  part2
kdahyun/Module03/build-part3-Desktop-Debug/: Makefile  part3
kdahyun/Module03/build-part4-Desktop-Debug/: moc_addressbook.cpp
kdahyun/Module03/build-part5-Desktop-Debug/: Makefile  part5
kdahyun/Module03/build-part6-Desktop-Debug/: Makefile  moc_addressbook.cpp  moc_finddialog.cpp  part6
kdahyun/Module03/build-part7-Desktop-Debug/: moc_addressbook.cpp  moc_finddialog.cpp  part7
kdahyun/Module03/build-remotecontrolledcar-Desktop-Debug/: Makefile
kdahyun/Module03/build-testqt-Desktop-Debug/: Makefile  moc_adddialog.cpp  moc_addresswidget.cpp  moc_bookmarktab.cpp  moc_finddialog.cpp  moc_mainwindow.cpp  moc_newaddresstab.cpp  moc_tablemodel.cpp  testqt  ui_mainwindow.h
kdahyun/Module03/dombookmarks/: dombookmarks
kdahyun/Module03/part1/: addressbook.h  main.cpp
kdahyun/Module03/part2/: part2
kdahyun/Module03/part3/: addressbook.cpp  part3
kdahyun/Module03/part5/: part5
kdahyun/Module03/part6/: addressbook.cpp
kdahyun/Module03/success_half/: adddialog.h  addresswidget.h  bookmarktab.cpp  testqt.pro
kgovindasamy/: kgovindasamy.md
kkim/: kkim.md
ktikh/: ktikh.md
kwarias/: kwarias.md
mbalman/: mbalman.md
mbrettschneider/: mbrettschneider.md
mjung/: mjung.md
ochurko/: ochurko.md
ooyekeye/: ooyekeye.md
oruban/: oruban.md
pbeckhauser/: pbeckhauser.md
sKim/: sKim.md
sKim/m01/: CMakeLists.txt  Car.h  Sportscar.h  Vehicle.h  main.cpp
sKim/m02/: CMakeLists.txt  main.cpp
sKim/m03/: CMakeLists.txt  Contact.cpp  Contact.h  ContactList.cpp  ContactList.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
sKim/m04/: CMakeLists.txt  Car.h  CarThread.h  RaceTrack.h  RacingGame.h  main.cpp  mainwindow.cpp
sKim/test1/: CMakeLists.txt  README.md  main.cpp
sKim/test2/: CMakeLists.txt  main.cpp
sha/: sha.md
sindik/: sindik.md
sjookim/: sjookim.md
skim/: skim.md
slee/: slee.md
snikalje/: snikalje.md
sogura/: shogura.md  sogura.md
sskim/: sskim.md
vangirov/: vangirov.md
vmounika/: vmounika.md
wlim/: wlim.md
wlucke/: wlucke.md
wtechaprechasil/: ex_00_02_StringConverter  wtechaprechasil.md
yyjo/: yyjo.md
(+112 files in other folders)
